# Farming-Adventure

./: .gitignore  CMakeLists.txt  README.md  values_per_seed.ods
Diagrams/: diagrammeClass.uml
src/core/: CMakeLists.txt  Clicker.cpp  Clicker.h  Game.cpp  Game.h  MyMain.cpp
src/core/Chest/: Chest.cpp  Chest.h  ChestView.cpp  ChestView.h
src/core/Effect/: ActiveEffect.cpp  ActiveEffect.h  Effect.cpp  Effect.h  EffectInterface.cpp  EffectInterface.h  Malus.cpp  Malus.h  Utility.cpp  Utility.h
src/core/Enum/: ChestType.h  SeedType.h
src/core/Game/: AutoClicker.cpp  AutoClicker.h  ClickablePlot.cpp  ClickablePlot.h  Game.cpp  Game.h  Seed.cpp  Seed.h  SeedFactory.cpp  SeedFactory.h  SeedReservoir.cpp  SeedReservoir.h  Soil.cpp  Soil.h  WheatSeed.cpp
src/core/Sound/: SoundManager.cpp  SoundManager.h
src/core/Texture/: TextureManager.cpp  TextureManager.h
src/main/: CMakeLists.txt  main.cpp
src/test/: CMakeLists.txt  unitTests.cpp
